fix offset, added scale, added overflow-y

--- a/src/components/ClaimArgumentList.css
+++ b/src/components/ClaimArgumentList.css
@@ -6,10 +6,13 @@
 
 .parentDiv {
     padding: 1.5rem;
+    overflow-y: scroll;
+
 }
 
 .claimBlock {
     padding-bottom: 2rem;
+
 }
 
 .anchor {
